--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">LocalStorage</string>
     <string name="add_employee">add employee</string>
+    <string name="add_todo">Add Todo</string>
+    <string name="show_todo">Show Todo</string>
 </resources>
