LAyout changes for todo recycler view items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="add_employee">add employee</string>
     <string name="add_todo">Add Todo</string>
     <string name="show_todo">Show Todo</string>
+    <string name="delete_all_todo">Delete All Todo</string>
 </resources>
